MOBI-387 Media controls overlap in Mediacast view - reverting previous change of using the accordion due to accordon pane height bug - audio, video, and photo now separated by fieldset rows
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@31900 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/mediacast/src/main/webapp/resources/css/photocast.css
+++ b/samples/mediacast/src/main/webapp/resources/css/photocast.css
@@ -51,6 +51,9 @@ label{
 .viewer{
     display:block;
     clear:both;
+    max-width:250px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .viewer video, .viewer audio, .viewer image {
@@ -335,6 +338,8 @@ textarea {
 	border-radius: 10px;
 	border: 7px solid white;
 	box-sizing: border-box;
+	z-index:1;
+    color:black;
 }
 @media screen and (min-width: 600px) {  
     .popup{
@@ -350,4 +355,9 @@ html.android .mobi-pagePanel-header a.mobi-button:visited {
 .mobi-tabset.mobi-tabset-tabs-top.mobi-tabset-tabs-top-header > .mobi-tabset-tabs{
     position:relative;
     top: 0;
+}
+.center {
+    display: block;
+    text-align: center;
+    padding: 10px;
 }
